Basic skeleton of PMAPS, connected google fonts

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>PMAPS</title>
+  <link rel="stylesheet" href="css/pmaps.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+</head>
+
+<body>
+  <h1 id="title">PMAPS</h1>
+</body>
+
+</html>
