Test map hooked up, deploying to test if api works

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <title>PMAPS</title>
   <link rel="stylesheet" href="css/pmaps.css">
@@ -10,6 +11,10 @@
 
 <body>
   <h1 id="title">PMAPS</h1>
+  <div id="map"></div>
+
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrP7GqZcoXfumM0y4SvILLX1WDucGeC2A&callback=initMap" async defer></script>
 </body>
 
 </html>
