--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <h1 id="title">PMAPS</h1>
   <div id="map"></div>
-
-  
+  <script src="js/pmaps.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrP7GqZcoXfumM0y4SvILLX1WDucGeC2A&callback=initMap" async defer></script>
 </body>
 
