Began overhaul of old code created function for map types with json input

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <title>PMAPS</title>
+  <!--<link rel="shortcut icon" href="/media/map_icon.svg">-->
   <link rel="stylesheet" href="css/pmaps.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 </head>
